Applying new style

--- a/app/views/debug.scala.html
+++ b/app/views/debug.scala.html
@@ -5,6 +5,9 @@
 	<div>
 		<input type="checkbox" id="chk-use-ajax"/>
 	</div>
+	<div class="publish-q-animation" style="display:none;">
+		<span id="publish-q-seq">第23問</span>
+	</div>
 	<h2>MessageTest</h2>
 	<div>
 		<div>
