--- a/app/views/makeQuestion.scala.html
+++ b/app/views/makeQuestion.scala.html
@@ -1,25 +1,21 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
 <div id="make-question" class="workspace">
-	<h1 id="make-q-h1">@Messages("ui.makeQuestion")</h1>
 	<div class="input-form">
 		<form id="make-q-form">
+			<header class="heading">
+				<p id="make-q-desc">@Messages("ui.createQuestion")</p>
+			</header>
 			<div>
 				<label for="make-q-question">@Messages("question")</label>
-			</div>
-			<div>
 				<textarea id="make-q-question" rows="3" class="form-control"></textarea>
 			</div>
 			<div>
 				<label for="make-q-answers">@Messages("choices")</label>
-			</div>
-			<div>
 				<textarea id="make-q-answers" rows="5" class="form-control"></textarea>
-				<p>@Messages("choicesNote")</p>
+				<p class="notes">@Messages("choicesNote")</p>
 			</div>
 			<div>
 				<label for="make-q-answerType">@Messages("correctChoice")</label>
-			</div>
-			<div>
 				<select id="make-q-answerType" class="form-control">
 					<option value="@AnswerType.FirstRow.code">@Messages("firstRow")</option>
 					<option value="@AnswerType.Most.code">@Messages("mostFrequentAnswer")</option>
@@ -29,41 +25,31 @@
 			</div>
 			<div class="option-ctrl">
 				@Messages("options") 
-				<span>
-					<i class="fa fa-toggle-down fa-lg"></i>
-					<i class="fa fa-toggle-up fa-lg" style="display:none;"></i>
-				</span>
+				<i class="fa fa-caret-down fa-lg"></i>
 			</div>
 			<div class="option-panel" style="display:none;">
 				<div>
 					<label for="make-q-tags">@Messages("tags")</label>
-				</div>
-				<div>
 					<input id="make-q-tags" class="form-control">
 				</div>
 				<div>
 					<label for="make-q-description">@Messages("description")</label>
-				</div>
-				<div>
 					<textarea id="make-q-description" rows="5" class="form-control"></textarea>
 				</div>
 				<div>
 					<label for="make-q-relatedUrl">@Messages("relatedUrl")</label>
-				</div>
-				<div>
 					<input id="make-q-relatedUrl" class="form-control">
 				</div>
 			</div>
 		</form>
-		<div id="make-q-update">
-			<button id="make-q-update-btn" class="btn" type="button" >@Messages("ui.create")</button>
-			<button id="make-q-back-btn" class="btn" type="button" style="display:none;">@Messages("back")</button>
+		<div id="make-q-update" class="box-button align-center">
+			<button type="button" id="make-q-back-btn" class="btn gray btn-small" style="display:none;">@Messages("back")</button>
+			<button type="button" id="make-q-update-btn" class="btn blue btn-info btn-small">@Messages("ui.create")</button>
 		</div>
 		<div id="make-q-publish" style="display:none;">
-			<h2>@Messages("publish")</h2>
-			<button id="make-q-publish-btn" class="btn" type="button" >@Messages("publish")</button>
-			<div>
-				<label>
+			<button id="make-q-publish-btn" class="btn blue btn-info btn-small" type="button" >@Messages("ui.publish")</button>
+			<div class="checkbox">
+				<label for="make-q-includeRnak">
 					<input id="make-q-includeRank" type="checkbox" value="true" checked="checked"> @Messages("includeToRanking")
 				</label>
 			</div>
