--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,9 +3,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/redmond/jquery-ui.css" />
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("javascripts/ext/animateDialog/jquery.animateDialog.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/normalize.css")">
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/style.css")">
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
