--- a/app/views/question.scala.html
+++ b/app/views/question.scala.html
@@ -1,32 +1,40 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
 <div id="edit-question" class="workspace">
-	<h1>@Messages("questions")</h1>
-	<div >
-		<button id="edit-question-new" class="btn">@Messages("new")</button>
-	</div>
 	<div class="tab-content">
-		<ul id="edit-question-tab">
+		<ul id="edit-question-tab" class="clear-fix">
 			<li><a href="#edit-question-stock">@(Messages("stock"))(<span id="question-stock-count">-1</span>)</a></li>
 			<li><a href="#edit-question-published">@(Messages("published"))(<span id="question-published-count">-1</span>)</a></li>
 		</ul>
-		<div>
-			<div style="float:left;">
-				<button class="btn" id="edit-question-left">
-					<i class="fa fa-chevron-circle-left fa-lg"></i>
-				</button>
-			</div>
-			<div style="float:right;">
-				<button class="btn" id="edit-question-right">
-					<i class="fa fa-chevron-circle-right fa-lg"></i>
-				</button>
-			</div>
-		</div>
+		<nav>
+			<ul>
+				<li>
+					<div class="pull-left">
+						<button class="btn" id="edit-question-left">
+							<i class="fa fa-chevron-circle-left fa-lg"></i>
+						</button>
+					</div>
+				</li>
+				<li>
+					<div class="center">
+						<button id="edit-question-new" class="btn blue btn-info">@Messages("new")</button>
+					</div>
+				</li>
+				<li>
+					<div class="pull-right">
+						<button class="btn" id="edit-question-right">
+							<i class="fa fa-chevron-circle-right fa-lg"></i>
+						</button>
+					</div>
+				</li>
+			</ul>
+		</nav>
 		<div id="edit-question-stock">
 			<table class="table table-hover table-striped">
 				<thead>
 					<tr>
 						<th class="q-creator">@Messages("questionFrom")</th>
 						<th class="q-text">@Messages("question")</th>
+						<th class="q-publish">@Messages("ui.publish")</th>
 					</tr>
 				</thead>
 				<tbody class="row-link">
