--- a/app/views/makeQuestion.scala.html
+++ b/app/views/makeQuestion.scala.html
@@ -44,10 +44,10 @@
 		</form>
 		<div id="make-q-update" class="box-button align-center">
 			<button type="button" id="make-q-back-btn" class="btn gray btn-small" style="display:none;">@Messages("back")</button>
-			<button type="button" id="make-q-update-btn" class="btn blue btn-info btn-small">@Messages("ui.create")</button>
+			<button type="button" id="make-q-update-btn" class="btn blue btn-small">@Messages("ui.create")</button>
 		</div>
 		<div id="make-q-publish" style="display:none;">
-			<button id="make-q-publish-btn" class="btn blue btn-info btn-small" type="button" >@Messages("ui.publish")</button>
+			<button id="make-q-publish-btn" class="btn blue btn-small" type="button" >@Messages("ui.publish")</button>
 			<div class="checkbox">
 				<label for="make-q-includeRnak">
 					<input id="make-q-includeRank" type="checkbox" value="true" checked="checked"> @Messages("includeToRanking")
