--- a/app/views/makeRoom.scala.html
+++ b/app/views/makeRoom.scala.html
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 			<div class="box-button align-center">
-				<button type="button" id="btn-make-room" class="btn blue btn-info btn-small" name="btn-make-room">@Messages("ui.create")</button>
+				<button type="button" id="btn-make-room" class="btn blue btn-small" name="btn-make-room">@Messages("ui.create")</button>
 			</div>
 		</form>
 	</div>
