--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -14,35 +14,35 @@
 			<p id="publish-q-text"></p>
 		</div>
 		<div class="buttons">
-			<button id="answer-1" class="btn blue btn-info btn-block btn-question">
+			<button id="answer-1" class="btn white btn-block btn-question">
 				<ul class="inline-block clear-fix">
 					<li class="answer-seq"></li>
 					<li class="text-inner answer"></li>
 					<li class="answer-cnt" style="display:none;"><span class="badge circle count"></span></li>
 				</ul>
 			</button>
-			<button id="answer-2" class="btn blue btn-info btn-block btn-question">
+			<button id="answer-2" class="btn white btn-block btn-question">
 				<ul class="inline-block clear-fix">
 					<li class="answer-seq"></li>
 					<li class="text-inner answer"></li>
 					<li class="answer-cnt" style="display:none;"><span class="badge circle count"></span></li>
 				</ul>
 			</button>
-			<button id="answer-3" class="btn blue btn-info btn-block btn-question">
+			<button id="answer-3" class="btn white btn-block btn-question">
 				<ul class="inline-block clear-fix">
 					<li class="answer-seq"></li>
 					<li class="text-inner answer"></li>
 					<li class="answer-cnt" style="display:none;"><span class="badge circle count"></span></li>
 				</ul>
 			</button>
-			<button id="answer-4" class="btn blue btn-info btn-block btn-question">
+			<button id="answer-4" class="btn white btn-block btn-question">
 				<ul class="inline-block clear-fix">
 					<li class="answer-seq"></li>
 					<li class="text-inner answer"></li>
 					<li class="answer-cnt" style="display:none;"><span class="badge circle count"></span></li>
 				</ul>
 			</button>
-			<button id="answer-5" class="btn blue btn-info btn-block btn-question">
+			<button id="answer-5" class="btn white btn-block btn-question">
 				<ul class="inline-block clear-fix">
 					<li class="answer-seq"></li>
 					<li class="text-inner answer"></li>
