--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -46,12 +46,12 @@ ol, ul                  { list-style: none; }
                           -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 html                    { font-size: 62.5%;
                           -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
-body                    { line-height: 1.428571429; font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','モトヤLシーダ3等幅','Helvetica Neue',Helvetica,Arial,sans-serif; font-size: 14px; color: #333; background-color: #fff; }
+body                    { height: 100%; line-height: 1.428571429; font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','モトヤLシーダ3等幅','Helvetica Neue',Helvetica,Arial,sans-serif; font-size: 14px; color: #333; background-color: #fff; }
 input,
 button,
 select,
 textarea                { line-height: inherit; font-family: inherit; font-size: inherit; }
-a                       { color: #428bca; text-decoration: none; }
+a                       { color: #5bc0de; text-decoration: none; }
 a:hover,
 a:focus                 { color: #2a6496; text-decoration: none; }
 img                     { vertical-align: middle; }
@@ -76,8 +76,12 @@ input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button { height: auto; }
 header                  { margin-top: 10px; padding: 10px; background: #f5f5f5; }
 
-#publish-question .btn          { white-space: inherit; }
-#publish-q-seq        { padding: 5px 10px; color: #fff; font-size: 16px; font-weight: bold; background: #5bc0de; }
+#content                { width: 100%; height: 100%; }
+#content-dynamic        { height: 100%; }
+
+#publish-question a     { vertical-align: middle; }
+#publish-question .btn  { min-height: 44px; white-space: inherit; }
+#publish-q-seq           { padding: 5px 10px; color: #fff; font-size: 16px; font-weight: bold; background: #5bc0de; }
 #publish-q-text          { min-height: 100px; padding: 10px; }
 #publish-q-text span     { float: left; display: none; }
 #publish-q-text span.cur { display: block; }
@@ -97,6 +101,27 @@ header                  { margin-top: 10px; padding: 10px; background: #f5f5f5; 
 
 #ranking h3             { margin-bottom: 20px; color: #333; }
 
+#tweet                  { height: 100%; min-height: 100%; }
+#tweet .form-group      { margin-top: 15px; margin-bottom: 15px; }
+#tweet .tweet-box       { min-height: 40px; padding: 10px 10px 15px; border-radius: 5px; background: #f0f0f0; }
+#tweet .tweet-box li    { display: block; margin-top: 10px; }
+#tweet .tweet-box p     { word-break: break-word; }
+#tweet .text            { margin-top: 5px; margin-bottom: 5px; color: #fff; }
+#tweet .timestamp       { text-align: right; color: #f5f5f5; font-size: 10px; }
+#tweet .input-box       { margin-top: 20px; }
+#tweet .align-left .text { color: #333; }
+#tweet .align-left .timestamp { color: #aaa; }
+
+.balloon-border         { position: relative; z-index: 0; display: inline-block; width: 70%; margin-top: 15px; padding: 5px 10px 5px; border: 1px solid #5bc0de; border-radius: 5px; background: #5bc0de; }
+.balloon-border:before  { content: ""; position: absolute; top: -9px; z-index: 1; display: block; width: 0; border: 10px solid transparent; border-top-width: 0; border-bottom-color: #5bc0de; }
+.balloon-border:after   { content: ""; position: absolute; top: -10px; display: block; width: 0; border: 10px solid transparent; border-top-width: 0; border-bottom-color: #5bc0de; }
+.align-right .balloon-border:before,
+.align-right .balloon-border:after { right: 5%; }
+.align-left .balloon-border { background: #fff; }
+.align-left .balloon-border:before,
+.align-left .balloon-border:after { left: 5%; }
+.align-left .balloon-border:before { border-bottom-color: #fff; }
+
 .container              { margin-right: auto; margin-left: auto; padding-right: 10px; padding-left: 10px; }
 .container:before,
 .container:after        { display: table; content: " "; }
@@ -105,7 +130,7 @@ header                  { margin-top: 10px; padding: 10px; background: #f5f5f5; 
 .container:after        { display: table; content: " "; }
 .container:after        { clear: both; }
 
-.workspace              { padding-bottom: 20px; }
+.workspace              { height: 100%; margin-bottom: 49px; padding-bottom: 20px; }
 
 .form-control           { display: block; width: 100%; height: 34px; line-height: 1.428571429; vertical-align: middle; padding: 6px 12px; border: 1px solid #ccc; border-radius: 4px; color: #555; font-size: 14px; background-color: #fff; background-image: none;
                           -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -129,14 +154,20 @@ textarea.form-control   { height: auto; }
 .btn:active,
 .btn.active             { outline: 0; background-image: none;
                           -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125); box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125); }
-.btn.disabled,
-.btn[disabled],
-fieldset[disabled] .btn { pointer-events: none; cursor: not-allowed; opacity: 0.65; filter: alpha(opacity=65);
-                          -webkit-box-shadow: none; box-shadow: none; }
-.btn.gray               { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #afafaf; text-shadow: 0 1px 0 rgba(0,0,0,0.2); background: #e5e5e5; }
-.btn.gray:active     { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #999; background: #ccc; }
-.btn.blue               { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #2f8dcb; text-shadow: 0 1px 0 rgba(0,0,0,0.2); background: #5bc0de; }
-.btn.blue:active     { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #107bc2; background: #31b6dd; }
+.btn.gray               { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #afafaf; border-color: #ddd; color: #333; text-shadow: 0 1px 0 rgba(0,0,0,0.2); background: #e5e5e5; }
+.btn.gray:active        { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #999; background: #ccc; }
+.btn.white              { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #2f8dcb; border-color: #46b8da; color: #333; text-shadow: 0 1px 0 rgba(0,0,0,0.2); background: #fff; }
+.btn.white:active       { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #107bc2; background: #31b6dd; }
+.btn.blue               { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #2f8dcb; border-color: #46b8da; color: #fff; text-shadow: 0 1px 0 rgba(0,0,0,0.2); background: #5bc0de; }
+.btn.blue:active        { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #107bc2; background: #31b6dd; }
+.btn.green              { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #009671; text-shadow: 0 1px 0 rgba(0,0,0,0.2); border-color: #46b8da; color: #fff; background-color: #5bc0de; background: #21ba95; }
+.btn.green:active       { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #009671; background: #21ba95; }
+.btn.black              { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #333; text-shadow: 0 1px 0 rgba(0,0,0,0.2); border-color: #999; color: #fff; background: #555; }
+.btn.black:active       { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #333; background: #444; }
+.btn:disabled.red                { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #d91448; text-shadow: 0 1px 0 rgba(0,0,0,0.2); border-color: #f8215a; color: #fff; background: #ff497a; }
+.btn:disabled.red:active         { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #ff497a; background: #ff497a; }
+.btn.disabled           { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #999; text-shadow: 0 1px 0 rgba(0,0,0,0.2); border-color: #bfbfbf; color: #999; background: #eee; }
+.btn.disabled:active    { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #c1c1c1; background: #ccc; }
 
 .dropdown               { position: relative; }
 .dropdown-toggle:focus  { outline: 0; }
@@ -244,7 +275,6 @@ fieldset[disabled] .btn { pointer-events: none; cursor: not-allowed; opacity: 0.
 .btn-question li:nth-child(1) { width: 10%; text-align: left; }
 .btn-question li:nth-child(2) { width: auto; text-align: left; word-break: break-all; }
 .btn-question li:nth-child(3) { width: 15%; margin-right: 15px; text-align: right; }
-.btn-info               { border-color: #46b8da; color: #fff; background-color: #5bc0de; }
 .box-button             { padding-top: 15px; border-top: 2px solid #f5f5f5; }
 .buttons                { margin: 0 -10px; padding: 15px 10px; background: #eee; }
 
@@ -271,7 +301,7 @@ fieldset[disabled] .btn { pointer-events: none; cursor: not-allowed; opacity: 0.
 
 /* Components
 -----------------------------------------------------------------------------*/
-.container              { padding-top: 70px; }
+.container              { height: 100%; padding-top: 70px; }
 .container i            { margin-left: 5px; }
 .container nav i        { margin-left: 0; }
 .toolbar                { position: fixed; right: 0; left: 0; z-index: 1030; width: 100%; min-height: 50px; margin-bottom: 20px; border: 1px solid #e7e7e7; border-radius: 0; background: #f8f8f8; }
@@ -286,6 +316,15 @@ fieldset[disabled] .btn { pointer-events: none; cursor: not-allowed; opacity: 0.
 .toolbar-content        { margin-right: auto; margin-left: auto; }
 .toolbar-title          { padding-top: 10px; font-size: 18px; font-weight: bold; }
 .toolbar-content div    { display: inline-block; }
+
+.tabbar                 { position: fixed; bottom: 0; width: 100%; height: 49px; background: #f5f5f5; border: 1px solid #ccc; }
+.tabbar ul              { display: table; width: 100%; }
+.tabbar li              { display: table-cell; border-left: 1px solid #eee; text-align: center; }
+.tabbar li:first-child  { border-left: none; }
+.tabbar li a            { display: block; width: 100%; height: 100%; }
+.tabbar li p            { font-size: 10px; }
+.tabbar li i            { padding: 5px; color: #5bc0de; font-size: 30px; }
+
 #msg-dialog             { position: fixed; top: 50%; left: 50%; width: 280px; min-height: 50px; margin-top: -25px; margin-left: -140px; border: solid 1; border-radius: 4px; background-color: #ddd;
                           animation-name: "fade"; animation-duration: 3s; animation-timing-function: ease; animation-delay: 0; animation-iteration-count: 1; animation-direction: alternate;
                           -webkit-animation-name: "fade";
@@ -317,7 +356,7 @@ th.r-rank               { width: 15%; }
 td.r-rank               { text-align: center; color: #5bc0de; }
 th.r-name               { width: auto; }
 th.r-correct,
-td.r-correct            { width: 19%; text-align: right; }
+td.r-correct            { width: 20%; text-align: right; }
 th.r-time,
 td.r-time               { width: 20%; text-align: right; }
 th.r-datetime           { width: 30%; }
