--- a/app/views/question.scala.html
+++ b/app/views/question.scala.html
@@ -9,20 +9,20 @@
 			<ul>
 				<li>
 					<div class="pull-left">
-						<button class="btn" id="edit-question-left">
-							<i class="fa fa-chevron-circle-left fa-lg"></i>
+						<button type="button" class="btn" id="edit-question-left">
+							<i class="fa fa-angle-left fa-lg"></i>
 						</button>
 					</div>
 				</li>
 				<li>
 					<div class="center">
-						<button id="edit-question-new" class="btn blue btn-info">@Messages("new")</button>
+						<button id="edit-question-new" class="btn blue">@Messages("new")</button>
 					</div>
 				</li>
 				<li>
 					<div class="pull-right">
-						<button class="btn" id="edit-question-right">
-							<i class="fa fa-chevron-circle-right fa-lg"></i>
+						<button type="button" class="btn" id="edit-question-right">
+							<i class="fa fa-angle-right fa-lg"></i>
 						</button>
 					</div>
 				</li>
