--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -35,23 +35,7 @@
 		</div>
 	}
 	<div class="toolbar-content align-center">
-		@if(params.isLogined && params.isInRoom) {
-			@roomInfo.map { room =>
-				<div id="room-icons">
-					<button type="button" id="toolbar-question">
-						<i class="fa fa-check-circle fa-lg"></i>
-					</button>
-					<button type="button" id="toolbar-ranking">
-						<i class="fa fa-star fa-lg"></i>
-					</button>
-					<button type="button" id="btn-chat" class="menu-chat">
-						<i class="fa fa-comment fa-lg"></i>
-					</button>
-				</div>
-			}
-		} else {
-			<div id="title" class="toolbar-title">@Messages("application.title")</div>
-		}
+		<div id="title" class="toolbar-title">@roomInfo.map(_.name).getOrElse(Messages("application.title"))</div>
 	</div>
 </div>
 <div class="container">
@@ -74,6 +58,30 @@
 		}
 	</div>
 </div>
+@if(params.isInRoom) {
+<div class="tabbar">
+    <ul class="clear-fix">
+        <li>
+            <a href="#" id="toolbar-question">
+                <i class="fa fa-check-circle fa-lg"></i>
+                <p>@Messages("question")</p>
+            </a>
+        </li>
+        <li>
+            <a href="#" id="toolbar-ranking">
+                <i class="fa fa-star fa-lg"></i>
+                <p>@Messages("ranking")</p>
+            </a>
+        </li>
+        <li>
+            <a href="#" class="menu-chat">
+                <i class="fa fa-comment fa-lg"></i>
+                <p>@Messages("chat")</p>
+            </a>
+        </li>
+    </ul>
+</div>
+}
 <div id="sidr" style="display:none;">
 	<ul>
 		<li><a href="#home" class="dynamic"><i class="fa fa-home"></i> @Messages("home")</a></li>
