--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -51,16 +51,18 @@
 			</button>
 		</div>
 		<div id="publish-q-detail" style="display:none;">
-			<div id="publish-q-description" style="display:none;">
-				<h2>@Messages("description")</h2>
-				<textarea rows="5" class="form-control" readonly="readonly"></textarea>
-			</div>
-			<div id="publish-q-url" style="display:none;">
-				<h2>@Messages("relatedUrl")</h2>
-				<a href="#" target="_blank">#</a>
-			</div>
-			<div style="margin-top:10px;">
-				<button id="publish-q-ranking" class="btn">@Messages("ranking")</button>
+			<form class="input-form">
+				<div id="publish-q-description" style="display:none;">
+					<label>@Messages("description")</label>
+					<textarea rows="5" class="form-control" readonly="readonly"></textarea>
+				</div>
+				<div id="publish-q-url" style="display:none;">
+					<label>@Messages("relatedUrl")</label>
+					<a href="#" target="_blank">#</a>
+				</div>
+			</form>
+			<div>
+				<button id="publish-q-ranking" class="btn blue btn-small">@Messages("ranking")</button>
 			</div>
 		</div>
 	</div>
