--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -80,7 +80,7 @@ header                  { margin-top: 10px; padding: 10px; background: #f5f5f5; 
 #content-dynamic        { height: 100%; }
 
 #publish-question a     { vertical-align: middle; }
-#publish-question .btn  { min-height: 44px; white-space: inherit; }
+#publish-question .buttons .btn  { min-height: 44px; white-space: inherit; }
 #publish-q-seq           { padding: 5px 10px; color: #fff; font-size: 16px; font-weight: bold; background: #5bc0de; }
 #publish-q-text          { min-height: 100px; padding: 10px; }
 #publish-q-text span     { float: left; display: none; }
@@ -101,16 +101,16 @@ header                  { margin-top: 10px; padding: 10px; background: #f5f5f5; 
 
 #ranking h3             { margin-bottom: 20px; color: #333; }
 
-#tweet                  { height: 100%; min-height: 100%; }
-#tweet .form-group      { margin-top: 15px; margin-bottom: 15px; }
-#tweet .tweet-box       { min-height: 40px; padding: 10px 10px 15px; border-radius: 5px; background: #f0f0f0; }
-#tweet .tweet-box li    { display: block; margin-top: 10px; }
-#tweet .tweet-box p     { word-break: break-word; }
-#tweet .text            { margin-top: 5px; margin-bottom: 5px; color: #fff; }
-#tweet .timestamp       { text-align: right; color: #f5f5f5; font-size: 10px; }
-#tweet .input-box       { margin-top: 20px; }
-#tweet .align-left .text { color: #333; }
-#tweet .align-left .timestamp { color: #aaa; }
+#chat                  { height: 100%; min-height: 100%; }
+#chat .form-group      { margin-top: 15px; margin-bottom: 15px; }
+#chat .tweet-box       { min-height: 40px; padding: 10px 10px 15px; border-radius: 5px; background: #f0f0f0; }
+#chat .tweet-box li    { display: block; margin-top: 10px; }
+#chat .tweet-box p     { word-break: break-word; }
+#chat .text            { margin-top: 5px; margin-bottom: 5px; color: #fff; }
+#chat .timestamp       { text-align: right; color: #f5f5f5; font-size: 10px; }
+#chat .input-box       { margin-top: 20px; }
+#chat .align-left .text { color: #333; }
+#chat .align-left .timestamp { color: #aaa; }
 
 .balloon-border         { position: relative; z-index: 0; display: inline-block; width: 70%; margin-top: 15px; padding: 5px 10px 5px; border: 1px solid #5bc0de; border-radius: 5px; background: #5bc0de; }
 .balloon-border:before  { content: ""; position: absolute; top: -9px; z-index: 1; display: block; width: 0; border: 10px solid transparent; border-top-width: 0; border-bottom-color: #5bc0de; }
@@ -407,13 +407,11 @@ td.r-winners            { white-space: nowrap; overflow: hidden; text-overflow: 
 .publish-q-animation {
   width: 100%;
   text-align: center;
-  animation-name: "inout";
   animation-duration: 1s;
   animation-timing-function: ease;
   animation-delay: 0;
   animation-iteration-count: 1;
   animation-direction: alternate;
-  -webkit-animation-name: "inout";
   -webkit-animation-duration: 1s;
   -webkit-animation-timing-function: ease;
   -webkit-animation-delay: 0;
