--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -1,38 +1,43 @@
 @(userInfo: Option[UserInfo], twitterUrl: String)(implicit lang: Lang)
 <div id="chat" class="workspace">
-	<h1>@Messages("chat")</h1>
-	<div>
+    @if(userInfo.isEmpty) {
 		<div>
-			<label>
-				<input type="checkbox" id="chat-notify"> @Messages("notifyTweet")
-			</label>
-		</div>
-		<div class="pull-right">@Html(Messages("html.roomMember"))</div>
-		<div class="clearfix"></div>
-	</div>
-	@userInfo.map { u =>
-		<div>
-			<textarea id="chat-text" class="form-control" rows="5" style="width: 100%;"></textarea>
-			<div id="chat-text-len">140</div>
-			<div>
-				<label>
-					<input id="chat-twitter" type="checkbox" checked="checked"> @Messages("postTwitter")
-				</label>
-			</div>
-			<button id="btn-tweet" type="button">@Messages("tweet")</button>
-		</div>
-	}.getOrElse {
-		<div>
-			<p>@Messages("loginRequiredToChat")</p>
+			<header class="heading">
+				<p>@Messages("loginRequiredToChat")</p>
+			</header>
 			<a class="btn btn-twitter" href="@twitterUrl">
 				<i class="fa fa-twitter fa-2x"></i>
 				@Messages("loginWithTwitter")
 			</a>
 		</div>
-	}
-	<hr>
-	<table class="table table-striped">
-		<tbody>
-		</tbody>
-	</table>
+    }
+	<div>@Html(Messages("html.roomMember"))</div>
+    <div class="input-box">
+        <form role="form">
+            <div class="checkbox">
+                <label class="btn">
+					<input type="checkbox" id="chat-notify"> 
+					@Messages("notifyTweet")
+                </label>
+            </div>
+			@userInfo.map { u =>
+	            <div class="checkbox">
+	                <label class="btn">
+						<input id="chat-twitter" type="checkbox" checked="checked">
+						@Messages("postTwitter")
+	                </label>
+	            </div>
+	            <div class="form-group">
+	                <textarea id="chat-text" class="form-control"></textarea>
+	            </div>
+				<div id="chat-text-len">140</div>
+	            <div class="align-center">
+					<button id="btn-tweet" type="button" class="btn blue">@Messages("tweet")</button>
+	            </div>
+			}
+        </form>
+    </div>
+	<div class="tweet-box">
+		<ul></ul>
+	</div>
 </div>
