--- a/app/views/ranking.scala.html
+++ b/app/views/ranking.scala.html
@@ -3,53 +3,53 @@
 	<h1>@Messages("ranking")</h1>
 	<div id="ranking-tab" class="tab-content" style="display:none;">
 		<ul>
-			<li><a href="#ranking-now">@Messages("rankingNow")</a></li>
+			<li class="ranking-now"><a href="#ranking-now">@Messages("rankingNow")</a></li>
 			<li><a href="#ranking-event">@Messages("rankingEvent")</a></li>
 			<li><a href="#ranking-total">@Messages("rankingTotal")</a></li>
 		</ul>
-		<div id="ranking-now">
+		<div id="ranking-now" class="ranking-now" class="tab-pane">
 			<table class="table table-hover" id="ranking-now-tbl">
 				<thead>
 					<tr>
-						<th class="rank">@Messages("rank")</th>
-						<th class="username">@Messages("username")</th>
-						<th class="correctCount">@Messages("correctCount")</th>
-						<th class="time">@Messages("time")</th>
+						<th class="r-rank">@Messages("rank")</th>
+						<th class="r-name">@Messages("username")</th>
+						<th class="r-correct">@Messages("correctCount")</th>
+						<th class="r-time">@Messages("time")</th>
 					</tr>
 				</thead>
 				<tbody>
 				</tbody>
 			</table>
 		</div>
-		<div id="ranking-event">
+		<div id="ranking-event" class="tab-pane">
 			<table class="table table-hover" id="ranking-event-tbl">
 				<thead>
 					<tr>
-						<th class="title">@Messages("title")</th>
-						<th class="username">@Messages("winner")</th>
-						<th class="correctCount">@Messages("correctCount")</th>
-						<th class="time">@Messages("time")</th>
+						<th class="r-title">@Messages("title")</th>
+						<th class="r-winners">@Messages("winner")</th>
+						<th class="r-correct">@Messages("correctCount")</th>
+						<th class="r-time">@Messages("time")</th>
 					</tr>
 				</thead>
 				<tbody>
 				</tbody>
 			</table>
 		</div>
-		<div id="ranking-total">
+		<div id="ranking-total" class="tab-pane">
 			<table class="table table-hover" id="ranking-total-tbl">
 				<thead>
 					<tr>
-						<th class="rank">@Messages("rank")</th>
-						<th class="username">@Messages("username")</th>
-						<th class="point">@Messages("point")</th>
-						<th class="correctCount">@Messages("correctCount")</th>
+						<th class="r-rank">@Messages("rank")</th>
+						<th class="r-name">@Messages("username")</th>
+						<th class="r-point">@Messages("point")</th>
+						<th class="r-correct">@Messages("correctCount")</th>
 					</tr>
 				</thead>
 				<tbody>
 				</tbody>
 			</table>
 		</div>
-		<div id="ranking-event-detail" style="display:none;">
+		<div id="ranking-event-detail" style="display:none;" class="tab-pane">
 			<table class="table table-hover" id="ranking-event-detail-tbl">
 				<thead>
 					<tr>
@@ -63,7 +63,7 @@
 				</tbody>
 			</table>
 		</div>
-		<div id="ranking-user" style="display:none;">
+		<div id="ranking-user" style="display:none;" class="tab-pane">
 			<table class="table table-hover" id="ranking-event-detail-tbl">
 				<thead>
 					<tr>
