--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -40,11 +40,12 @@
 </div>
 <div class="container">
 	<div id="entry-event-alert" class="entry-event alert alert-info">
-		<div class="pull-right">
-			<button class="entry-event-btn">@Messages("entry")</button>
-			<button id="not-entry-event">@Messages("notEntry")</button>
-		</div>
 		<p>@Messages("eventConfirm")</p>
+		<div>
+			<button class="entry-event-btn btn blue btn-small">@Messages("entry")</button>
+			
+			<button id="not-entry-event" class="btn gray btn-small">@Messages("notEntry")</button>
+		</div>
 	</div>
 	<div id="content">
 		<div id="content-dynamic">
