--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -378,7 +378,7 @@ td.r-winners            { white-space: nowrap; overflow: hidden; text-overflow: 
 .row-link tr            { cursor: pointer; }
 .entry-event            { display: none; }
 
-
+tr.q-published th, tr.q-published td { background: #ff497a;}
 /* jQuery UI
 -----------------------------------------------------------------------------*/
 .ui-widget-content,
