--- a/app/views/question.scala.html
+++ b/app/views/question.scala.html
@@ -2,8 +2,8 @@
 <div id="edit-question" class="workspace">
 	<div class="tab-content">
 		<ul id="edit-question-tab" class="clear-fix">
-			<li><a href="#edit-question-stock">@(Messages("stock"))(<span id="question-stock-count">-1</span>)</a></li>
-			<li><a href="#edit-question-published">@(Messages("published"))(<span id="question-published-count">-1</span>)</a></li>
+			<li><a href="#edit-question-stock">@(Messages("stock"))(<span id="question-stock-count"></span>)</a></li>
+			<li><a href="#edit-question-published">@(Messages("published"))(<span id="question-published-count"></span>)</a></li>
 		</ul>
 		<nav>
 			<ul>
