--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -6,7 +6,7 @@
  */
 html                    { font-family: sans-serif;
                           -webkit-text-size-adjust: 100%; }
-body                    { margin: 0;}
+body                    { margin: 0; }
 a                       { background: transparent; }
 a:focus                 { outline: thin dotted; }
 a:active,
@@ -158,7 +158,7 @@ textarea.form-control   { height: auto; }
 .btn.gray:active        { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #999; background: #ccc; }
 .btn.white              { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #2f8dcb; border-color: #46b8da; color: #333; text-shadow: 0 1px 0 rgba(0,0,0,0.2); background: #fff; }
 .btn.white:active       { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #107bc2; background: #31b6dd; }
-.btn.blue               { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #2f8dcb; border-color: #46b8da; color: #fff; text-shadow: 0 1px 0 rgba(0,0,0,0.2); background: yellow; }
+.btn.blue               { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #2f8dcb; border-color: #46b8da; color: #fff; text-shadow: 0 1px 0 rgba(0,0,0,0.2); background: #5bc0de; }
 .btn.blue:active        { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #107bc2; background: #31b6dd; }
 .btn.green              { box-shadow: 0 -1px 0 rgba(255,255,255,0.2) inset, 0 4px 0 #009671; text-shadow: 0 1px 0 rgba(0,0,0,0.2); border-color: #46b8da; color: #fff; background-color: #5bc0de; background: #21ba95; }
 .btn.green:active       { top: 2px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset, 0 2px 0 #009671; background: #21ba95; }
