--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -41,9 +41,8 @@
 			</div>
 		</form>
 		<div class="box-button align-center">
-			<button id="event-toggle-btn" class="btn blue btn-small">@Messages("ui.start")</button>
+			<button id="event-start-btn" class="btn blue btn-small">@Messages("ui.start")</button>
 			<button id="event-update-btn" class="btn blue btn-small">@Messages("save")</button>
-		<div>
 		</div>
 	</div>
 </div>
