--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -86,17 +86,17 @@ header                  { margin-top: 10px; padding: 10px; background: #f5f5f5; 
 #publish-q-text span     { float: left; display: none; }
 #publish-q-text span.cur { display: block; }
 
-#edit-question nav ul   { display: table; width: 100%; padding-right: 0; padding-left: 0; border-bottom: none; background: #f5f5f5; }
-#edit-question nav li   { display: table-cell; padding: 0; }
-#edit-question nav li:first-child { padding-left: 10px; }
-#edit-question nav li:last-child { padding-right: 10px;}
-#edit-question nav li:first-child .btn,
-#edit-question nav li:last-child .btn { background: #fff; }
-#edit-question nav li:nth-child(2) i { color: #fff; }
-#edit-question nav .btn { border: 1px solid #5bc0de;  }
-#edit-question nav .btn:disabled { border-color: #ccc; }
-#edit-question nav .btn:disabled i { color: #ccc; }
-#edit-question nav .btn i { color: #5bc0de; font-weight: bold; }
+nav.paging-bar ul   { display: table; width: 100%; padding-right: 0; padding-left: 0; border-bottom: none; background: #f5f5f5;}
+nav.paging-bar li   { display: table-cell; padding: 0; }
+nav.paging-bar li:first-child { padding-left: 10px; }
+nav.paging-bar li:last-child { padding-right: 10px;}
+nav.paging-bar li:first-child .btn,
+nav.paging-bar li:last-child .btn { background: #fff; }
+nav.paging-bar li:nth-child(2) i { color: #fff; }
+nav.paging-bar .btn { border: 1px solid #5bc0de;  }
+nav.paging-bar .btn:disabled { border-color: #ccc; }
+nav.paging-bar .btn:disabled i { color: #ccc; }
+nav.paging-bar .btn i { color: #5bc0de; font-weight: bold; }
 #edit-question-current-none { margin-top: 10px; margin-bottom: 10px; }
 
 #ranking h3             { margin-bottom: 20px; color: #333; }
