--- a/app/views/eventMembers.scala.html
+++ b/app/views/eventMembers.scala.html
@@ -1,5 +1,5 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
-<div id="event-members">
+<div id="event-members" class="workspace">
 	<h2>@Messages("duringEvent")</h2>
 	<nav class="paging-bar">
 		<ul>
