--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -74,6 +74,7 @@
 	<ul>
 		<li><a href="#home" class="dynamic"><i class="fa fa-home"></i> @Messages("home")</a></li>
 		@userInfo.map { user =>
+			<li><a href="#mypage" class="dynamic">@Messages("mypage")</a></li>
 			<li><a href="#make-room" class="dynamic">@Messages("ui.makeRoom")</a></li>
 		}
 		@roomInfo.map { room =>
