--- a/app/views/question.scala.html
+++ b/app/views/question.scala.html
@@ -5,7 +5,7 @@
 			<li><a href="#edit-question-stock">@(Messages("stock"))(<span id="question-stock-count"></span>)</a></li>
 			<li><a href="#edit-question-published">@(Messages("published"))(<span id="question-published-count"></span>)</a></li>
 		</ul>
-		<nav>
+		<nav class="paging-bar">
 			<ul>
 				<li>
 					<div class="pull-left">
