--- a/app/views/ranking.scala.html
+++ b/app/views/ranking.scala.html
@@ -49,7 +49,7 @@
 			</table>
 		</div>
 		<div id="ranking-event-detail" style="display:none;" class="tab-pane">
-			<div>
+			<div class="back-btn">
 				<button id="ranking-event-detail-back" class="btn gray btn-small">@Messages("back")</button>
 			</div>
 			<table class="table table-hover" id="ranking-event-detail-tbl">
@@ -66,7 +66,7 @@
 			</table>
 		</div>
 		<div id="ranking-user" style="display:none;" class="tab-pane">
-			<div>
+			<div class="back-btn">
 				<button id="ranking-user-back" class="btn gray btn-small">@Messages("back")</button>
 			</div>
 			<div>
