Add back-btn class to html

--- a/app/views/publishQuestion.scala.html
+++ b/app/views/publishQuestion.scala.html
@@ -1,6 +1,6 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
 <div id="publish-question" class="workspace">
-	<div id="publish-q-back" style="display:none;">
+	<div id="publish-q-back" style="display:none;" class="back-btn">
 		<button id="publish-q-back-btn" class="btn gray btn-small">@Messages("back")</button>
 	</div>
 	<div id="publish-q-default">
