--- a/app/views/mypage.scala.html
+++ b/app/views/mypage.scala.html
@@ -32,7 +32,7 @@
 			</table>
 		</div>
 		<div id="mypage-events" class="tab-pane" style="display:none;">
-			<div>
+			<div class="back-btn">
 				<button id="mypage-events-back" class="btn gray btn-small">@Messages("back")</button>
 			</div>
 			<h3 id="mypage-events-roomName"></h3>
@@ -50,7 +50,7 @@
 			</table>
 		</div>
 		<div id="mypage-events" class="tab-pane" style="display:none;">
-			<div>
+			<div class="back-btn">
 				<button id="mypage-events-back" class="btn gray btn-small">@Messages("back")</button>
 			</div>
 			<h3 id="mypage-events-roomName"></h3>
@@ -68,7 +68,7 @@
 			</table>
 		</div>
 		<div id="mypage-questions" class="tab-pane" style="display:none;">
-			<div>
+			<div class="back-btn">
 				<button id="mypage-questions-back" class="btn gray btn-small">@Messages("back")</button>
 			</div>
 			<table class="table table-hover">
